@@ -2,4 +2,4 @@
 #define VERSION_MINOR      0
 #define VERSION_REVISION   0
 #define VERSION_BETA       -beta
-#define VERSION_BUILD      1
+#define VERSION_BUILD      2
